# deepseek-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.json  deepseek_mcp.py  install.ps1  pyproject.toml  requirements.txt
